src/styles/overrides.scss
/* stylelint-disable declaration-no-important */

@use 'sass:map';
@use 'variables';

.dc-root_wide-format:not(.mobile) {
    .dc-doc-layout__right:has(.dc-subnavigation:only-child) {
        display: none;
    }
}

.pc-block-base {
    .dc-doc-page__main &:first-child {
        margin-top: 0 !important;
    }
}

.pc-navigation {
    z-index: 120;

    & > .container-fluid {
        padding-right: variables.$desktopHPadding;
        padding-left: variables.$desktopHPadding;
    }
}

.pc-layout {
    &__content {
        display: flex;
    }

    &__navigation > .container-fluid {
        padding-right: variables.$desktopHPadding;
        padding-left: variables.$desktopHPadding;
        max-width: 1440px;
    }

    &__content > .pc-Grid {
        .container-fluid {
            padding-right: 0;
            padding-left: 0;

            max-width: unset;
        }

        .pc-Grid {
            padding-left: 40px;
            padding-right: 40px;
        }
    }
}

.dc-doc-page {
    &__main:has(&__content > .pc-page-constructor__docs) {
        padding: 20px 0 24px;
    }
}

.pc-desktop-navigation {
    &__buttons &__item {
        display: contents;
    }

    &__mobile-navigation-container {
        margin-right: 0;
    }
}

.pc-mobile-navigation {
    z-index: 119;
}

.gc-simple-consent.gc-analytics {
    right: 0;
    left: unset;
    z-index: 101;
}

.g-root_theme_dark .dc-neuro-expert-widget .toggle-button {
    background-color: variables.$colorBgDark;
}

@media (max-width: map.get(variables.$screenBreakpoints, 'xxxl') - 1) {
    .dc-root_wide-format {
        .dc-doc-page {
            width: 100%;
        }
    }

    .pc-layout {
        &__content > .pc-Grid,
        &__navigation > .container-fluid {
            max-width: 100%;
        }
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md')) {
    .g-root .dc-neuro-expert-widget .container {
        padding: 12px;
    }

    .g-root .dc-neuro-expert-widget .toggle-button {
        width: 3em;
        overflow: hidden;
    }

    .g-root .dc-neuro-expert-widget .toggle-button .logo-wrapper {
        flex-shrink: 0;
        pointer-events: none;
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
    .dc-root_wide-format {
        & .dc-subnavigation {
            $wideFormatHorizontalPadding: 8px;

            padding-inline: 0 $wideFormatHorizontalPadding;
            width: calc(100% - $wideFormatHorizontalPadding);
        }

        & .dc-doc-page__main {
            padding-inline: #{variables.$wideFormatHorizontalPadding};
        }
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
    .pc-navigation {
        & > .container-fluid {
            padding-right: 0;
            padding-left: 0;
        }

        .pc-overflow-scroller {
            justify-content: flex-end;
            overflow: visible;
        }
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
    .dc-toc {
        height: fit-content !important;
    }

    body:not(:has(.pc-navigation)) .dc-sidebar {
        top: var(--dc-subnavigation-height, 52px);
        z-index: 117;
        height: calc(100% - var(--dc-subnavigation-height, 52px));

        &-navigation__button {
            margin-right: 0;
        }
    }

    body:has(.pc-navigation) .dc-sidebar {
        --dc-header-height: var(--header-height, 64px);
    }

    .pc-navigation-item:has(.dc-controls) {
        display: none;
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
    .dc-root_document-page {
        .pc-Grid {
            max-width: 100%;
        }
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'md') - 1) {
    .dc-root_focused-search {
        .pc-navigation {
            .pc-desktop-navigation {
                &__left,
                &__navigation-container {
                    display: none;
                }

                &__right {
                    flex: 1 1 100%;
                    max-width: 100%;
                }

                &__mobile-navigation-container {
                    padding-right: 0;
                }
            }

            .pc-overflow-scroller__wrapper {
                width: 100%;
            }

            .pc-navigation-item:has(> .Suggest) {
                width: 100%;
            }

            .pc-mobile-menu-button {
                display: none;
            }
        }
    }
}

@media (max-width: map.get(variables.$screenBreakpoints, 'sm')) {
    .pc-block-base.pc-block-base.pc-block-base:first-child {
        margin-top: var(--pc-first-block-mobile-indent, 64px);
    }
}

